force-app/main/default/objects/Proposal__c/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <description>Yearly fuel consumption in litres</description>
    <label>Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>