force-app/main/default/objects/Proposal__c/fields/IsAcceptedSellConditions__c.field-meta.xml
<CustomField>
    <fullName>IsAcceptedSellConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accepted &quot;CGV&quot;</description>
    <label>IsAcceptedSellConditions</label>
    <type>Checkbox</type>
</CustomField>