force-app/main/default/objects/Proposal__c/fields/IsAllStations__c.field-meta.xml
<CustomField>
    <fullName>IsAllStations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discount on all stations or preferred one?</description>
    <label>IsAllStations</label>
    <type>Checkbox</type>
</CustomField>