force-app/main/default/objects/Proposal__c/fields/IsConsumptionKnown__c.field-meta.xml
<CustomField>
    <fullName>IsConsumptionKnown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConsumptionKnown</label>
    <type>Checkbox</type>
</CustomField>