force-app/main/default/objects/Proposal__c/fields/PreferredStation__c.field-meta.xml
<CustomField>
    <fullName>PreferredStation__c</fullName>
    <description>Preferred gas station (IsAllStations = false)</description>
    <label>PreferredStation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>