force-app/main/default/objects/Proposal__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>