force-app/main/default/objects/Proposal__c/fields/Promo_code__c.field-meta.xml
<CustomField>
    <fullName>Promo_code__c</fullName>
    <label>Promo code</label>
    <length>90</length>
    <type>Text</type>
</CustomField>