force-app/main/default/objects/Proposal__c/fields/QofCardsContry__c.field-meta.xml
<CustomField>
    <fullName>QofCardsContry__c</fullName>
    <description>Number of cards Luxembourg</description>
    <label>QofCardsContry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>