force-app/main/default/objects/Proposal__c/fields/QofCardsEurope__c.field-meta.xml
<CustomField>
    <fullName>QofCardsEurope__c</fullName>
    <description>Number of cards Europe</description>
    <label>QofCardsEurope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>