force-app/main/default/objects/Proposal__c/fields/QofCars__c.field-meta.xml
<CustomField>
    <fullName>QofCars__c</fullName>
    <description>Number of cars</description>
    <label>QofCars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>