force-app/main/default/objects/Proposal__c/fields/QofTrucks__c.field-meta.xml
<CustomField>
    <fullName>QofTrucks__c</fullName>
    <description>Number of trucks</description>
    <label>QofTrucks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>