force-app/main/default/objects/Proposal__c/fields/QofVans__c.field-meta.xml
<CustomField>
    <fullName>QofVans__c</fullName>
    <description>Number of vans</description>
    <label>QofVans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>