force-app/main/default/objects/Proposal__c/fields/Robot_Code__c.field-meta.xml
<CustomField>
    <fullName>Robot_Code__c</fullName>
    <description>Anti robot check</description>
    <label>Robot Code</label>
    <length>90</length>
    <type>Text</type>
</CustomField>