force-app/main/default/objects/Proposal__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <label>ServiceCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>